fix: :bug: fix cards shadow not showing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -374,6 +374,7 @@ header {
 
   .content {
     @include mainContent();
+    overflow-x: visible;
   }
 
   .maid {
